@@ -5,6 +5,7 @@
 -update sprite to revise member groups.
 -update sprite argument handling.
 -update sprite.collide_mask to use mask.overlap.
+-add mouse set_cursor and get_cursor methods.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
